--- a/item-managements/package.json
+++ b/item-managements/package.json
@@ -12,6 +12,7 @@
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.3.0",
     "axios": "^1.6.8",
+    "dotenv": "^16.4.5",
     "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18"
